--- a/site_libs/11_ls.html
+++ b/site_libs/11_ls.html
@@ -218,12 +218,6 @@ window.Quarto = {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./13_lsnla.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">LLS: Computational Cost</span></span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
   <a href="./references.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">References</span></a>
   </div>
@@ -716,7 +710,7 @@ This means we can add in *any* $\beta_0$ from the null-space and still end up wi
 </section>
 <section id="further-reading" class="level2" data-number="2.7">
 <h2 data-number="2.7" class="anchored" data-anchor-id="further-reading"><span class="header-section-number">2.7</span> Further reading</h2>
-<p><em>Linear Algebra Crash Course (<a href="00_linalg.html#sec-linalg" class="quarto-xref"><span>Section A.1</span></a>)</em></p>
+<p><em>Linear Algebra Crash Course (<span class="quarto-unresolved-ref">?sec-linalg</span>)</em></p>
 <p><em>The Matrix Cookbook (<span class="citation" data-cites="petersen2012matrix">Petersen and Pedersen (<a href="references.html#ref-petersen2012matrix" role="doc-biblioref">2012</a>)</span>)</em></p>
 <hr>
 
