--- a/site_libs/references.html
+++ b/site_libs/references.html
@@ -50,7 +50,7 @@ div.csl-indent {
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
 <link href="./00_linalg.html" rel="next">
-<link href="./13_lsnla.html" rel="prev">
+<link href="./12_lslinalg.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -151,12 +151,6 @@ div.csl-indent {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./13_lsnla.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">LLS: Computational Considerations</span></span></a>
-  </div>
-</li>
-        <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
   <a href="./references.html" class="sidebar-item-text sidebar-link active">
  <span class="menu-text">References</span></a>
   </div>
@@ -220,9 +214,6 @@ Learning</span>.”</span> 2024. <a href="https://www.merriam-webster.com/dictio
 <div id="ref-petersen2012matrix" class="csl-entry" role="listitem">
 Petersen, Kaare Brandt, and Michael Syskind Pedersen. 2012. <span>“The
 Matrix Cookbook.”</span> <a href="https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf">https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf</a>.
-</div>
-<div id="ref-strang2022introduction" class="csl-entry" role="listitem">
-Strang, Gilbert. 2022. <em>Introduction to Linear Algebra</em>.
 </div>
 </div>
 
@@ -640,8 +631,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./13_lsnla.html" class="pagination-link" aria-label="LLS: Computational Considerations">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">4</span>&nbsp; <span class="chapter-title">LLS: Computational Considerations</span></span>
+      <a href="./12_lslinalg.html" class="pagination-link" aria-label="LLS: A linear algebra perspective">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">3</span>&nbsp; <span class="chapter-title">LLS: A linear algebra perspective</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
